<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.notedetails.NoteDetailActivity">

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_36dp"
        app:showAsAction="always"/>


    <item android:id="@+id/action_edit"
          android:title="@string/action_edit"
          android:icon="@drawable/ic_mode_edit_white_36dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_share"
        android:title="@string/action_send"
        android:icon="@drawable/ic_send_white_36dp"
        app:showAsAction="ifRoom"/>


    <item android:id="@+id/action_play"
        android:title="@string/action_play"
        android:icon="@drawable/ic_headset_white_36dp"
        app:showAsAction="ifRoom"/>

</menu>