<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.notes.NoteListActivity">

      <item android:id="@+id/action_delete"
          android:title="@string/action_delete"
          android:icon="@drawable/ic_delete_white_36dp"
          app:showAsAction="always"/>

      <item android:id="@+id/action_record"
          android:title="@string/action_record"
          android:icon="@drawable/ic_mic_white_36dp"
          app:showAsAction="always"/>


      <item android:id="@+id/action_camera"
          android:title="@string/action_camera"
          android:icon="@drawable/ic_photo_camera_white_36dp"
          app:showAsAction="always"/>



</menu>
